# RuslyChat

./: .gitignore  README.md
ruslychat-api/: Cargo.toml  keys.ini
ruslychat-api/.cargo/: config
ruslychat-api/certificates/: ruslychat.afvr.pro.crt  ruslychat.afvr.pro.csr  ruslychat.afvr.pro.key
ruslychat-api/config/: config.ini
ruslychat-api/src/: api.rs  encrypt.rs  init.rs  log.rs  main.rs
ruslychat-api/src/config/: config.ini
ruslychat-client/: Cargo.toml
ruslychat-client/config/: config.ini
ruslychat-client/src/: channel.rs  connect_tcp.rs  hash_gen.rs  init.rs  log.rs  login.rs  main.rs  message.rs  user.rs
ruslychat-server/: Cargo.toml
ruslychat-server/config/: config.ini
ruslychat-server/src/: init.rs  log.rs  main.rs  tcp_listening.rs
ruslychat-server/src/config/: config.ini
