[package]
name = "ruslychat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "21.0.2"
rust-ini = "0.17"
chrono = "0.4.19"
tokio = { version = "*", features = ["full"] }
warp = "*"
pwhash ="*"
rand = "0.8.4"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"