[package]
name = "ruslychat-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "21.0.2"
rust-ini = "0.17"
chrono = "0.4.19"
tokio = { version = "1.14.0", features = ["full"] }
warp = { version = "0.3.2", features = ["tls"] }
pwhash ="1.0.0"
rand = "0.8.4"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
serde_derive = "1.0.131"
rsa = "0.5.0"
