[package]
name = "ruslychat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rust-ini = "0.17"
regex = "1"
reqwest = { version = "0.11.7", features = ["json", "blocking"] }
rpassword = "5.0.1"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
rand = "0.8.4"
rsa= "0.5.0"